--- a/index.html
+++ b/index.html
@@ -3,5 +3,24 @@
     <link href="./CSS/style.css" type="text/css" rel="stylesheet">
     <title>My Times</title>
   </head>
-  <body></body>
+  <body>
+      <div class="header">
+        <div class="logo">
+          <div class="">
+            <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myt-logo.jpg">
+          </div>
+          <div class="titleHead">
+            <span>My Times</span>
+          </div>
+        </div>
+        <div class="navHead">
+          <ul>
+            <li><a href="">World</a></li>
+            <li><a href="">U.S.</a></li>
+            <li><a href="">Tech</a></li>
+            <li><a href="">Science</a></li>
+          </ul>
+        </div>
+      </div>
+  </body>
 </html>
