--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
+
 <html>
   <head>
     <link href="./CSS/style.css" type="text/css" rel="stylesheet">
     <title>My Times</title>
   </head>
   <body>
+      <!-- HEADER SECTION -->
       <div class="header">
         <div class="logo">
           <div class="">
@@ -22,5 +24,16 @@
           </ul>
         </div>
       </div>
+      <!-- END OF HEADER SECTION -->
+      <!-- CONTAINER SECTION -->
+      <div class="container">
+        <div class="column" id="first">
+        </div>
+        <div class="column" id="second">
+        </div>
+        <div class="column" id="third">
+        </div>
+      </div>
+      <!-- END OF CONTAINER SECTION -->
   </body>
 </html>
