NEW STRUCTURE: Containers & Items

--- a/index.html
+++ b/index.html
@@ -27,18 +27,26 @@
       <!-- END OF HEADER SECTION -->
       <!-- CONTAINER SECTION -->
       <div class="container">
-        <div class="column">
+        <div class="columnFirst">
+          <div class="news">
+            <div class="headline"></div>
+          </div>
           <div class="news"></div>
+          <div class="news">
+            <div class="headline"></div>
+          </div>
           <div class="news"></div>
+        </div>
+        <div class="columnSecond">
+          <div class="news">
+            <div class="headline"></div>
+            <div class="headline"></div>
+            <div class="headline"></div>
+          </div>
           <div class="news"></div>
           <div class="news"></div>
         </div>
-        <div class="column">
-          <div class="news"></div>
-          <div class="news"></div>
-          <div class="news"></div>
-        </div>
-        <div class="column">
+        <div class="columnThird">
           <div class="news"></div>
           <div class="news"></div>
         </div>
