--- a/index.html
+++ b/index.html
@@ -28,14 +28,42 @@
       <!-- CONTAINER SECTION -->
       <div class="container">
         <div class="columnFirst">
-          <div class="news">
+          <div class="new1">
+            <div class="mainImage">
+              <div class="h1">
+                <h1>HEADLINE</h1>
+              </div>
+            </div>
+            <div class="mainStory">
+              <p>MONUMENT VALLEY, AZ - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nec nisl at augue dapibus dignissim. Nunc condimentum rutrum metus, ac eleifend lacus viverra nec. Proin ultrices egestas diam sed mollis. Nulla sapien massa, dictum vitae est et, pellentesque rutrum risus. Nunc volutpat, metus ac rutrum tempus, orci nisi porttitor dolor, sit amet luctus metus est ut mauris. Quisque vulputate nisl vitae massa rhoncus, at sagittis elit accumsan. Etiam tempus, lorem quis blandit imperdiet, enim dui lobortis tortor, sit amet lobortis arcu ex id odio. Nam fermentum nulla et eros bibendum, sed ullamcorper massa scelerisque. Vestibulum aliquet placerat leo a hendrerit. Nulla non sagittis neque. Nullam sit amet fringilla massa.</p>
+            </div>
+          </div>
+          <div class="new2">
+            <h3>Orca Spends Vacation at Land World Puget</h3>
+            <p>PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...</p>
+          </div>
+          <div class="new2">
+            <h3>Burger for Breakfast: How Early is too Early?</h3>
+            <p>Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl erat.</p>
+          </div>
+          <div class="new2"></div>
+          <div class="new2"></div>
+          <div class="new2">
+            <div class="headline"></div>
+            <div class="headline"></div>
+            <div class="headline"></div>
+            <div class="headline"></div>
+            <div class="headline"></div>
+            <div class="headline"></div>
+            <div class="headline"></div>
+            <div class="headline"></div>
             <div class="headline"></div>
           </div>
-          <div class="news"></div>
-          <div class="news">
+          <div class="new2"></div>
+          <div class="new2">
             <div class="headline"></div>
           </div>
-          <div class="news"></div>
+          <div class="new2"></div>
         </div>
         <div class="columnSecond">
           <div class="news">
