container structure (column two)

--- a/index.html
+++ b/index.html
@@ -46,32 +46,29 @@
             <h3>Burger for Breakfast: How Early is too Early?</h3>
             <p>Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl erat.</p>
           </div>
-          <div class="new2"></div>
-          <div class="new2"></div>
           <div class="new2">
-            <div class="headline"></div>
-            <div class="headline"></div>
-            <div class="headline"></div>
-            <div class="headline"></div>
-            <div class="headline"></div>
-            <div class="headline"></div>
-            <div class="headline"></div>
-            <div class="headline"></div>
-            <div class="headline"></div>
+            <div id="fall" class="image">
+              <div class="h2">
+                <h2>Line</h2>
+              </div>
+            </div>
           </div>
-          <div class="new2"></div>
           <div class="new2">
-            <div class="headline"></div>
+            <div id="hipster" class="image">
+              <div class="h2">
+                <h2>Line 2</h2>
+              </div>
+            </div>
           </div>
-          <div class="new2"></div>
         </div>
         <div class="columnSecond">
           <div class="news">
-            <div class="headline"></div>
-            <div class="headline"></div>
-            <div class="headline"></div>
+            <h3>FBI Finds Action Star Guilty of False Advertising</h3>
+              <p>WASHINGTON DC- Donec luctus sem augue, rutrum posuere orci aliquam sed. Nam vitae aliquam lectus. Sed tempor tortor est, nec sagittis eros tincidunt sed. Morbi venenatis condimentum sem, vitae sollicitudin turpis pulvinar eget. Morbi pellentesque consectetur mi id auctor. Phasellus tincidunt orci mauris, placerat pharetra urna fringilla vitae. Morbi eget rutrum urna. Cras condimentum augue ut ante sollicitudin interdum. Pellentesque cursus dolor at tincidunt cursus. Vestibulum blandit aliquam felis...</p>
           </div>
-          <div class="news"></div>
+          <div class="news">
+            <div id="cats" class="image">
+          </div>
           <div class="news"></div>
         </div>
         <div class="columnThird">
