structure (column three)

--- a/index.html
+++ b/index.html
@@ -68,12 +68,32 @@
           </div>
           <div class="news">
             <div id="cats" class="image">
+              <div class="h2">
+                <h2>Line 3</h2>
+              </div>
+            </div>
           </div>
-          <div class="news"></div>
+          <div class="news">
+            <p>BROOKLYN, NY- In molestie nulla sodales sit amet. Proin vulputate, ipsum porta aliquam commodo, nunc nibh tincidunt lorem, vel consectetur neque mi vel neque. Mauris ultricies, nulla scelerisque sollicitudin lobortis, dui est sodales sapien, a vestibulum velit diam eget felis. Vivamus dignissim lacinia dolor, quis commodo tellus pellentesque in.</p>
+          </div>
         </div>
         <div class="columnThird">
-          <div class="news"></div>
-          <div class="news"></div>
+          <div class="news">
+            <div id="cookie" class="image"></div>
+          </div>
+          <div class="news">
+            <div class="biteHEAD">
+              <h4>NEWS BITES</h4>
+            </div>
+          </div>
+            <div class="newsBites">
+                <div class="bite"></div>
+                <div class="bite"></div>
+                <div class="bite"></div>
+                <div class="bite"></div>
+                <div class="bite"></div>
+                <div class="bite"></div>
+            </div>
         </div>
       </div>
       <!-- END OF CONTAINER SECTION -->
