Rough version (no footer) - fix fonts, spacing etc

--- a/index.html
+++ b/index.html
@@ -86,14 +86,14 @@
               <h4>NEWS BITES</h4>
             </div>
           </div>
-            <div class="newsBites">
-                <div class="bite"></div>
-                <div class="bite"></div>
-                <div class="bite"></div>
-                <div class="bite"></div>
-                <div class="bite"></div>
-                <div class="bite"></div>
-            </div>
+          <div class="box">
+            <div class="newzBites"><h5>Cat Emoji Goes Viral</h5></div>
+            <div class="newzBites"><h5>Buy Youtube Views</h5></div>
+            <div class="newzBites"><h5>Home Business Advertising Ideas</h5></div>
+            <div class="newzBites"><h5>Advertising Internet Online</h5></div>
+            <div class="newzBites"><h5>Illustration in Marketing Materials</h5></div>
+            <div class="newzBites"><h5>Finally a Top Secret Way You Can</h5></div>
+          </div>
         </div>
       </div>
       <!-- END OF CONTAINER SECTION -->
