--- a/index.html
+++ b/index.html
@@ -97,5 +97,24 @@
         </div>
       </div>
       <!-- END OF CONTAINER SECTION -->
+      <!-- FOOTER SECTION -->
+        <div class="footer">
+          <div class="logo">
+            <div class="titleHead">
+              <span> My Times</span>
+            </div>
+          </div>
+          <div class="navHead">
+            <ul>
+              <li><a href="">World</a></li>
+              <li><a href="">U.S.</a></li>
+              <li><a href="">Tech</a></li>
+              <li><a href="">Science</a></li>
+            </ul>
+          </div>
+        </div>
+
+
+      <!-- END OF FOOTER -->
   </body>
 </html>
